# ottr

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  package.json
.github/workflows/: ci.yml
.husky/: prepare-commit-msg
crates/ottr_main/: Cargo.toml
crates/ottr_main/src/: lib.rs
crates/ottr_window/: CHANGELOG.md  Cargo.toml
crates/ottr_window/src/: lib.rs
examples/: window.rs
src/: lib.rs
