[package]
name = "ottr"
description = "A highly parallel game engine"
readme = "README.md"
categories = ["game-engines", "graphics", "rendering"]
keywords = ["game", "engine", "graphics", "gamedev", "otter"]
documentation = "https://docs.rs/ottr"
exclude = [".github", ".husky", "node_modules", "assets", "*.json"]
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true

[workspace]
members = ["crates/*"]

package.license = "MIT OR Apache-2.0"
package.repository = "https://github.com/otterengine/ottr"

[features]
default = ["std"]
std = ["ottr_main/std"]

[dependencies]
ottr_main = { path = "crates/ottr_main", default-features = false }
